<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nuevo_comunicado"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="12dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tipo"
            android:textStyle="bold" />
        <RadioGroup
            android:id="@+id/rgTipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp">
            <RadioButton
                android:id="@+id/rbAnuncio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anuncio" />
            <RadioButton
                android:id="@+id/rbEvento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/evento"
                android:layout_marginStart="16dp"/>
        </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/area"
            android:textStyle="bold"
            android:layout_marginTop="8dp" />
        <Spinner
            android:id="@+id/spArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/audiencia"
            android:textStyle="bold"
            android:layout_marginTop="8dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/cbEstudiantes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/estudiantes" />
            <CheckBox
                android:id="@+id/cbProfesores"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profesores"
                android:layout_marginStart="12dp" />
            <CheckBox
                android:id="@+id/cbAdministrativo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/administrativo"
                android:layout_marginStart="12dp" />
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo"
            android:textStyle="bold"
            android:layout_marginTop="8dp" />
        <EditText
            android:id="@+id/etTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Ingrese título" />

        <TextView
            android:id="@+id/tvLugarLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/lugar"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etLugar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Ingrese lugar" />


        <TextView
            android:id="@+id/tvFechaLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/fecha_label"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#000000"
            android:text="@string/seleccionar_fecha" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descripcion"
            android:textStyle="bold"
            android:layout_marginTop="8dp" />
        <EditText
            android:id="@+id/etDescripcion"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:hint="Escriba aquí la descripción" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arte_imagen"
            android:textStyle="bold"
            android:layout_marginTop="8dp" />
        <Button
            android:id="@+id/btnImagen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#000000"
            android:text="@string/adjuntar_imagen" />
        <TextView
            android:id="@+id/tvImagenNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_marginTop="4dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="16dp">
            <Button
                android:id="@+id/btnPublicar"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:backgroundTint="#000000"
                android:text="@string/publicar" />
            <Button
                android:id="@+id/btnCancelar"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:backgroundTint="#000000"
                android:text="@string/cancelar"
                android:layout_marginStart="12dp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
