<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/textoprueba"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerComunicadosActivity"
    android:background="@drawable/background2">


    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="52dp"
        android:layout_height="45dp"
        android:background="?attr/listChoiceBackgroundIndicator"
        android:contentDescription="@string/back_button_content_description"
        android:src="?attr/homeAsUpIndicator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/iconColor"/>

    <LinearLayout
        android:id="@+id/verComunicados_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="25dp"
        android:paddingStart="25dp"
        android:paddingLeft="25dp"
        android:paddingTop="25dp"
        android:paddingEnd="25dp"
        android:paddingRight="25dp"
        android:paddingBottom="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/titulo_VerCom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00F6F4F4"
            android:drawableTop="@drawable/anuncio"
            android:text="@string/ver_comunicados"
            android:textAlignment="center"
            android:textColor="#020202"
            android:textColorLink="#0D0C0C"
            android:textSize="40sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/LineaDivisora"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="#0B0909" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Btn_selFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/caja_borde"
            android:text="@string/seleccionar_fecha"
            app:backgroundTint="@null"
            app:cornerRadius="0dp"
            android:textColor="@color/textoGeneral"/>

        <TextView
            android:id="@+id/txtFecha"
            android:layout_width="365dp"
            android:layout_height="45dp"
            android:text="@string/no_fecha_seleccionada"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp" />

        <ScrollView
            android:id="@+id/sp_verCom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/layout_Com"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>